Fix desktop layout issues

--- a/components/login/login.css
+++ b/components/login/login.css
@@ -9,7 +9,7 @@
 body {
     background: white;
     /* padding: 20px; */
-    max-width: 600px;
+    /* max-width: 600px; */
     margin: 0 auto;
 }
 
